--- a/src/views/index.html
+++ b/src/views/index.html
@@ -151,16 +151,121 @@
                 <div class="carousel-wrapper">
                     <div class="carousel">
                         <div id="portfolio" class="carousel__photo initial">
-
+                            <div class="portfolio-gradient-content">
+                                <div class="p-g-content">
+                                    <h3>[ Portfolio ]</h3>
+                                    <p style="display: block;text-align: center;">Technologies Used:</p>
+                                    <ul class="tech-list">
+                                        <li>SCSS (CSS3)</li>
+                                        <li>Javascript</li>
+                                        <li>Webpack</li>
+                                        <li>Express</li>
+                                    </ul>
+                                    <ul class="portfolio-links">
+                                        <li>
+                                            <a href="https://github.com/franky212/portfolio" target="_blank" class="portfolio-git">
+                                                <img src="../images/git-white.svg" alt="Git">
+                                                <span>Git</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.figma.com/file/zS9VW00oglTzbOwvLuWVOc/website?node-id=0%3A1" target="_blank" class="portfolio-figma">
+                                                <img src="../images/figma.svg" alt="Figma">
+                                                <span>Figma</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                         <div id="ultradent" class="carousel__photo">
-
+                            <div class="portfolio-gradient-content">
+                                <div class="p-g-content">
+                                    <h3>[ Ultradent ]</h3>
+                                    <p style="display: block;text-align: center;">Technologies Used:</p>
+                                    <div class="portfolio-overflow-list">
+                                        <ul class="tech-list">
+                                            <li>Javascript</li>
+                                            <li>Webpack</li>
+                                            <li>Express</li>
+                                            <li>Preact(React) / Redux</li>
+                                            <li>React Router</li>
+                                        </ul>
+                                        <ul>
+                                            <li>SCSS (CSS3)</li>
+                                            <li>jQuery</li>
+                                            <li>Grunt</li>
+                                            <li>Razor Views</li>
+                                        </ul>
+                                    </div>
+                                    <ul class="portfolio-links">
+                                        <li>
+                                            <a href="https://www.ultradent.com/" target="_blank" class="portfolio-web">
+                                                <img src="../images/web-white.svg" alt="Ultradent Website">
+                                                <span>Website</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                         <div id="opalescence" class="carousel__photo">
-
+                            <div class="portfolio-gradient-content">
+                                <div class="p-g-content">
+                                    <h3>[ Opalescence ]</h3>
+                                    <p style="display: block;text-align: center;">Technologies Used:</p>
+                                    <div class="portfolio-overflow-list">
+                                        <ul>
+                                            <li>SCSS (CSS3)</li>
+                                            <li>Javascript</li>
+                                            <li>jQuery</li>
+                                            <li>Webpack</li>
+                                        </ul>
+                                        <ul>
+                                            <li>Express</li>
+                                            <li>Razor Views</li>
+                                            <li>Google Maps</li>
+                                        </ul>
+                                    </div>
+                                    <ul class="portfolio-links">
+                                        <li>
+                                            <a href="https://www.opalescence.com/" target="_blank" class="portfolio-web">
+                                                <img src="../images/web-white.svg" alt="Opalescence Website">
+                                                <span>Website</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
-                        <div id="cyberpunk" class="carousel__photo">
-
+                        <div id="whats-going-on" class="carousel__photo">
+                            <div class="portfolio-gradient-content">
+                                <div class="p-g-content">
+                                    <h3>[ What's Going On ]</h3>
+                                    <p style="display: block;text-align: center;">Technologies Used:</p>
+                                    <ul class="tech-list">
+                                        <li>CSS</li>
+                                        <li>Javascript</li>
+                                        <li>React / Redux</li>
+                                        <li>Express</li>
+                                        <li>Google Maps, Geocoding, Ticket Master</li>
+                                    </ul>
+                                    <ul class="portfolio-links">
+                                        <li>
+                                            <a href="https://github.com/franky212/Whats-Going-On" target="_blank" class="portfolio-git">
+                                                <img src="../images/git-white.svg" alt="Git">
+                                                <span>Git</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://whats-going-on.surge.sh/" target="_blank" class="portfolio-web">
+                                                <img src="../images/web-white.svg" alt="Opalescence Website">
+                                                <span>Website</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="carousel__gradient--left"></div>
