--- a/src/styles/base-styles/base-styles.scss
+++ b/src/styles/base-styles/base-styles.scss
@@ -4,6 +4,7 @@ html, body {
     box-sizing: border-box;
     color: whitesmoke;
     font-size: 16px;
+    scroll-behavior: smooth;
 }
 
 .page_body {
