--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,7 +14,7 @@
     right: 0;
     top: 0;
     z-index: -1;
-    border-radius: 2rem;    
+    border-radius: 2rem;
     transition: transform 0.2s ease-in-out;
 }
   
@@ -49,10 +49,6 @@ MOBILE MENU ANIMATION CSS
         opacity: 1;
         clip-path: circle(100%);
         overflow: hidden;
-
-        // .mobile-links {
-        //     opacity: 1;
-        // }
     }
 }
 
@@ -110,19 +106,19 @@ MOBILE MENU ANIMATION CSS
 }
 
 .menuicon {
-    display:block;
-    cursor:pointer;
+    display: block;
+    cursor: pointer;
     color: whitesmoke;
     
     &__bar {
-      fill:none;
+      fill: none;
       stroke: currentColor;
-      stroke-width:3;
-      stroke-linecap:round;
+      stroke-width: 3;
+      stroke-linecap: round;
     }
     &__bar {
       transform: rotate(0deg);
-      transform-origin:50% 50%;
+      transform-origin: 50% 50%;
       transition: transform .25s ease-in-out;
     }
 }
@@ -137,13 +133,13 @@ MOBILE MENU ANIMATION CSS
   //animate the menu icon
   .menuicon {
         color:white;
-        transform:rotate(180deg);
+        transform: rotate(180deg);
         &__circle {
-            stroke-dashoffset:0;
+            stroke-dashoffset: 0;
         }
         &__bar:nth-child(1),
         &__bar:nth-child(4) {
-            opacity:0;
+            opacity: 0;
         }
         &__bar:nth-child(2) {
             transform: rotate(45deg);
@@ -176,7 +172,7 @@ END MOBILE MENU ANIMATION CSS
     top: 0;
     left: 0;
     z-index: 0;
-    background-color: rgba(26, 26, 26, 30%);
+    background-color: rgba(26, 26, 26, 40%);
 }
 
 #main-nav {
@@ -201,13 +197,11 @@ END MOBILE MENU ANIMATION CSS
             text-decoration: none;
             padding: 1rem;
             margin-right: 1rem;
+            transition: color .2s ease-in-out;
         }
 
-        #contact-cta {
-            background-color: $primary-color;
-            border-radius: 2rem;
-            margin: 0;
-            padding: .75rem 1.25rem .75rem 1.25rem;
+        a:hover {
+            color: $primary-color;
         }
 
         @media only screen and (min-width: 1024px) {
@@ -220,6 +214,8 @@ END MOBILE MENU ANIMATION CSS
         font-size: 2rem;
         font-weight: 900;
         margin: 0;
+        color: whitesmoke;
+        text-decoration: none;
     }
 
     @media only screen and (min-width: 1024px) {
@@ -245,10 +241,24 @@ END MOBILE MENU ANIMATION CSS
         position: relative;
         opacity: 0;
         z-index: 1;
-        font-size: 3rem;
-        color: $primary-color;
-        font-weight: 900;
-        text-shadow: .5px .5px 2px #1a1a1d;
+
+        h1 {
+            font-size: 3rem;
+            color: $primary-color;
+            font-weight: 900;
+            text-shadow: .5px .5px 2px #1a1a1d;
+        }
+
+        #portfolio-cta {
+            display: inline-block;
+            font-weight: 300;
+            background-color: $primary-color;
+            color: whitesmoke;
+            text-decoration: none;
+            border-radius: 2rem;
+            margin: 0;
+            padding: .75rem 1.25rem .75rem 1.25rem;
+        }
     }
 
     @media only screen and (min-width: 1024px) {
@@ -616,13 +626,14 @@ END MOBILE MENU ANIMATION CSS
             justify-content: center;
             align-content: center;
             transition: transform 0.2s, opacity 0.4s ease-in-out;
-            font-size: 1.75rem;
+            font-size: 2rem;
             
             .p-g-content {
                 width: 100%;
                 margin: 0 auto;
                 transition: opacity 0.4s ease-in-out;
-
+                line-height: 30px;
+                
                 h3 {
                     text-align: center;
                     font-size: 3rem;
@@ -634,6 +645,7 @@ END MOBILE MENU ANIMATION CSS
 
                 @media only screen and (min-width: 1024px) {
                     width: 60%;
+                    line-height: initial;
                 }
             }
 
@@ -682,20 +694,20 @@ END MOBILE MENU ANIMATION CSS
 
                 .portfolio-web {
                     img {
-                        width: 20%;
+                        width: 30%;
                     }
                 }
 
                 .portfolio-git {
                     img {
                         color: whitesmoke;
-                        width: 18%;
+                        width: 28%;
                     }
                 }
                 .portfolio-figma {
                     
                     img {
-                        width: 14%;
+                        width: 22%;
                     }
                 }
 
