--- a/src/views/index.html
+++ b/src/views/index.html
@@ -277,6 +277,31 @@
                 </div>
             </section>
 
+            <footer id="contact-me">
+                <div class="container">
+                    <ul class="footer-list">
+                        <li>
+                            <a href="https://drive.google.com/file/d/1VlsASZjujsr1TigSpgS8MYy-My4JqSWj/view?usp=sharing" target="_blank" class="portfolio-web">
+                                <img src="../images/download-icon-white.svg" alt="Resume">
+                                <span>Resume</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/franky212/" target="_blank" class="portfolio-git">
+                                <img src="../images/git-white.svg" alt="Git Icon">
+                                <span>Git</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/frank-delaguila/" target="_blank" class="portfolio-web">
+                                <img src="../images/linkedin-icon-white.svg" alt="LinkedIn Icon">
+                                <span>LinkedIn</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </footer>
+
         </div>
     </body>
 </html>
