Adding in content for about me

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -73,7 +73,7 @@
                         <div class="about-content">
                             <div>
                                 <h2>Hi, I'm Frank</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta a nibh eget venenatis. Aenean at odio lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec a quam id dui molestie consequat. Curabitur ac sapien tellus. Donec malesuada molestie tortor a varius. Morbi lacus neque, fringilla sed vulputate eu, congue vestibulum nunc. Donec eget eleifend mi, ut posuere velit. Pellentesque sit amet lacinia sapien.</p>
+                                <p>Hi! My name is Frank Delaguila. I'm a Web Developer with Full-Stack JavaScript experience, as well as Graphic Design experience. I'm a firm believer that tech and design are the greatest way to simplify communications, elevate experiences, as well as engage and inspire people around the world. Great technology and design come from collaboration, and I'm excited to start a dialogue with you!</p>
                             </div>
                         </div>
                         <div class="profile-img">
