Separating out more styles into their own files for easier editing

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,8 @@
 @import './base-styles/base-styles';
 @import './base-styles/containers';
 
+@import './components/mobile-menu';
+@import './components/carousel';
 @import './components/footer';
   
 .fill:before {
@@ -32,136 +34,6 @@
     z-index: 1;
     cursor: pointer;
 }
-
-/****************************
-
-MOBILE MENU ANIMATION CSS
-
-****************************/
-
-.mobile-menu__open {
-    overflow: hidden;
-
-    .page_body {
-        opacity: 0.5!important;
-    }
-
-    .mobile-nav {
-        width: 100%;
-        opacity: 1;
-        clip-path: circle(100%);
-        overflow: hidden;
-    }
-}
-
-.nav__open,
-.nav__close {
-    padding: 1rem;
-}
-
-.mobile-nav {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    left: 0;
-    opacity: 0;
-    width: 0;
-    height: 100%;
-    z-index: 999;
-    overflow: hidden;
-    background-color: $background-color;
-    clip-path: circle(10% at 93% 0);
-    transition: clip-path .7s ease-in-out;
-    will-change: clip-path;
-
-    .nav__close {
-        position: absolute;
-        top: 0;
-        right: 0;
-        color: white;
-    }
-
-    .mobile-links {
-        padding: 0;
-        margin: 0;
-        position: relative;
-        top: 0;
-        left: 0;
-        z-index: 999;
-        font-size: 4rem;
-        text-transform: uppercase;
-        color: $primary-color;
-        list-style: none;
-        font-weight: 900;
-        text-align: center;
-
-        a {
-            color: whitesmoke;
-            text-decoration: none;
-        }
-
-        li {
-            margin: 4rem 0 4rem 0;
-            padding: 2rem;
-        }
-    }
-
-    @media only screen and (min-width: 1024px) {
-        display: none;
-    }
-}
-
-.menuicon {
-    display: block;
-    cursor: pointer;
-    color: whitesmoke;
-    
-    &__bar {
-      fill: none;
-      stroke: currentColor;
-      stroke-width: 3;
-      stroke-linecap: round;
-    }
-    &__bar {
-      transform: rotate(0deg);
-      transform-origin: 50% 50%;
-      transition: transform .25s ease-in-out;
-    }
-}
-
-// ---------------------------
-// Active State
-// ---------------------------
-
-.nav:target,
-.nav__close {
-  
-  //animate the menu icon
-  .menuicon {
-        color:white;
-        transform: rotate(180deg);
-        &__circle {
-            stroke-dashoffset: 0;
-        }
-        &__bar:nth-child(1),
-        &__bar:nth-child(4) {
-            opacity: 0;
-        }
-        &__bar:nth-child(2) {
-            transform: rotate(45deg);
-        }
-        &__bar:nth-child(3) {
-            transform: rotate(-45deg);
-        }
-    }
-}
-
-/****************************
-
-END MOBILE MENU ANIMATION CSS
-
-****************************/
 
 #desktop-menu {
     position: absolute;
@@ -582,259 +454,6 @@ END MOBILE MENU ANIMATION CSS
 
         @media only screen and (min-width: 1024px) {
             flex-direction: row;
-        }
-    }
-}
-
-.carousel-wrapper {
-    overflow: hidden;
-    max-width: 1920px;
-    margin: 0 auto;
-
-    .carousel {
-        position: relative;
-        transform-style: preserve-3d;
-        cursor: grab;
-
-        &:active {
-            cursor: grabbing;
-        }
-
-        .carousel__photo {
-            opacity: 0;
-            position: absolute;
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center center;
-            top: 0;
-            height: 1000px;
-            width: 65%;
-            border-radius: 8px;
-            z-index: 100;
-            transition: transform .5s, opacity .5s, z-index .5s;
-
-            &:hover .portfolio-gradient-content {
-                opacity: 1;
-            }
-
-            @media only screen and (min-width: 1024px) {
-                height: 510px;
-                width: 50%;
-            }
-        }
-
-        .portfolio-gradient-content {
-            opacity: 0;
-            will-change: opacity;
-            background-color: rgba($background-color, 0.8);
-            height: 100%;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-content: center;
-            transition: transform 0.2s, opacity 0.4s ease-in-out;
-            font-size: 2rem;
-            
-            .p-g-content {
-                width: 100%;
-                margin: 0 auto;
-                transition: opacity 0.4s ease-in-out;
-                line-height: 30px;
-                
-                h3 {
-                    text-align: center;
-                    font-size: 3rem;
-                    color: $primary-color;
-                    text-transform: uppercase;
-                    margin: 0 0 1rem 0;
-                    font-weight: 900;
-                }
-
-                @media only screen and (min-width: 1024px) {
-                    width: 60%;
-                    line-height: initial;
-                }
-            }
-
-            .portfolio-overflow-list {
-                display: flex;
-                justify-content: space-evenly;
-            }
-            
-            ul {
-                list-style: none;
-                text-align: center;
-                line-height: 30px;
-                margin: 0;
-                padding: 0;
-            }
-
-            .portfolio-links {
-                position: relative;
-                z-index: 999;
-                display: flex;
-                justify-content: center;
-                width: 50%;
-                margin: 1rem auto 0 auto;
-
-                li {
-                    width: 50%;
-                }
-
-                a {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    padding: 1rem;
-    
-                    img {
-                        display: inline-block;
-                        margin-right: .5rem;
-                    }
-                }
-    
-                & a:link,
-                & a:visited {
-                    color: whitesmoke;
-                    text-decoration: none;
-                }
-
-                .portfolio-web {
-                    img {
-                        width: 30%;
-                    }
-                }
-
-                .portfolio-git {
-                    img {
-                        color: whitesmoke;
-                        width: 28%;
-                    }
-                }
-                .portfolio-figma {
-                    
-                    img {
-                        width: 22%;
-                    }
-                }
-
-                @media only screen and (min-width: 1024px) {
-                    .portfolio-web {
-                        img {
-                            width: 18%;
-                        }
-                    }
-
-                    a {
-                        padding: 0;
-                    }
-                }
-            }
-
-            @media only screen and (min-width: 1024px) {
-                font-size: 1rem;
-            }
-        }
-
-        #portfolio {
-            background-image: url('../images/portfolio-website.jpg');
-        }
-
-        #ultradent {
-            background-image: url('../images/ultradent.jpg');
-        }
-
-        #opalescence {
-            background-image: url('../images/opalescence.jpg');
-        }
-
-        #whats-going-on {
-            background-image: url('../images/whats-going-on.jpg');
-        }
-
-        .carousel__photo.initial,
-        .carousel__photo.active {
-            opacity: 1;
-            position: relative;
-            z-index: 900;
-            transform: translateX(30%);
-
-            @media only screen and (min-width: 1024px) {
-                transform: translateX(50%);
-            }
-        }
-
-        .carousel__photo.prev,
-        .carousel__photo.next {
-            opacity: 1;
-            z-index: 800;
-        }
-
-        .carousel__photo.prev {
-            transform: translateX(-75%);
-
-            @media only screen and (min-width: 1024px) {
-                transform: translateX(-55%);
-            }
-        }
-
-        .carousel__photo.next {
-            transform: translateX(135%);
-
-            @media only screen and (min-width: 1024px) {
-                transform: translateX(155%);
-            }
-        }
-
-        .carousel__button--prev,
-        .carousel__button--next {
-            position: absolute;
-            top: 50%;
-            width: 3rem;
-            height: 3rem;
-            padding: 8px;
-            transform: translateY(-50%);
-            background-position: center center;
-            background-size: 75%;
-            background-repeat: no-repeat;
-            cursor: pointer;
-            z-index: 1001;
-        }
-
-        .carousel__button--prev {
-            background-image: url('../images/left-arrow.svg');
-            left: 25px;
-        }
-
-        .carousel__button--next {
-            background-image: url('../images/right-arrow.svg');
-            right: 25px;
-        }
-
-        .carousel__gradient--left,
-        .carousel__gradient--right {
-            display: block;
-            position: absolute;
-            top: 0;
-            content: '';
-            height: 100%;
-            width: 20%;
-            z-index: 1000;
-
-            @media only screen and (min-width: 1024px) {
-                width: 23%;
-            }
-        }
-
-        .carousel__gradient--right {
-            background: linear-gradient(to right, rgba(26, 26, 29, 0), rgba(26, 26, 29, 1));
-            right: 0;
-        }
-
-        .carousel__gradient--left {
-            background: linear-gradient(to left, rgba(26, 26, 29, 0), rgba(26, 26, 29, 1));
-            left: 0;
         }
     }
 }
